versions/v1.2.0/modules/de/pages/references/k3kcli.adoc
= K3k CLI-Befehle 
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: "2026-08-26"
:page-revdate: {revdate}

== k3kcli

CLI für K3K.

=== Optionen

----
      --debug               Turn on debug logs
  -h, --help                help for k3kcli
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli cluster

K3k Cluster-Befehl.

=== Optionen

----
  -h, --help   help for cluster
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Cluster erstellen

Einen neuen Cluster erstellen.

----
k3kcli cluster create [flags]
----

=== Beispiele

----
k3kcli cluster create [command options] NAME
----

=== Optionen

----
      --agent-args strings            agents extra arguments
      --agent-envs strings            agents extra Envs
      --agents int                    number of agents
      --annotations stringArray       Annotations to add to the cluster object (e.g. key=value)
      --cluster-cidr string           cluster CIDR
      --custom-certs string           The path for custom certificate directory
  -h, --help                          help for create
      --kubeconfig-server string      override the kubeconfig server host
      --labels stringArray            Labels to add to the cluster object (e.g. key=value)
      --mirror-host-nodes             Mirror Host Cluster Nodes
      --mode string                   k3k mode type (shared, virtual, hcp) (default "shared")
  -n, --namespace string              namespace of the k3k cluster
      --persistence-type string       persistence mode for the nodes (dynamic, ephemeral) (default "dynamic")
      --policy string                 The policy to create the cluster in
      --server-args strings           servers extra arguments
      --server-envs strings           servers extra Envs
      --servers int                   number of servers (default 1)
      --service-cidr string           service CIDR
      --storage-class-name string     storage class name for dynamic persistence type
      --storage-request-size string   storage size for dynamic persistence type
      --timeout duration              The timeout for waiting for the cluster to become ready (e.g., 10s, 5m, 1h). (default 3m0s)
      --tls-sans strings              additional Subject Alternative Names for the cluster server TLS certificate
      --token string                  token of the cluster
      --version string                k3s version
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Cluster löschen

Einen bestehenden Cluster löschen.

----
k3kcli cluster delete [flags]
----

=== Beispiele

----
k3kcli cluster delete [command options] NAME
----

=== Optionen

----
  -A, --all                delete all the clusters in the namespace
  -h, --help               help for delete
      --keep-data          keeps persistence volumes created for the cluster after deletion
  -n, --namespace string   namespace of the k3k cluster
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Cluster auflisten

Alle bestehenden Cluster auflisten.

----
k3kcli cluster list [flags]
----

=== Beispiele

----
k3kcli cluster list [command options]
----

=== Optionen

----
  -h, --help               help for list
  -n, --namespace string   namespace of the k3k cluster
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Cluster aktualisieren

Bestehenden Cluster aktualisieren

----
k3kcli cluster update [flags]
----

=== Beispiele

----
k3kcli cluster update [command options] NAME
----

=== Optionen

----
      --agents int32              number of agents
      --annotations stringArray   Annotations to add to the cluster object (e.g. key=value)
  -h, --help                      help for update
      --labels stringArray        Labels to add to the cluster object (e.g. key=value)
  -n, --namespace string          namespace of the k3k cluster
  -y, --no-confirm                Skip interactive approval before applying update
      --servers int32             number of servers (default 1)
      --version string            k3s version
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli kubeconfig

Kubeconfig für Cluster verwalten.

=== Optionen

----
  -h, --help   help for kubeconfig
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli kubeconfig generieren

Kubeconfig für Cluster generieren.

----
k3kcli kubeconfig generate [flags]
----

=== Beispiele

----
k3kcli kubeconfig generate [command options] NAME
----

=== Optionen

----
      --altNames strings           altNames of the generated certificates for the kubeconfig
      --cn string                  Common name (CN) of the generated certificates for the kubeconfig (default "system:admin")
      --config-name string         the name of the generated kubeconfig file
      --expiration-days int        Expiration date of the certificates used for the kubeconfig (default 365)
  -h, --help                       help for generate
      --kubeconfig-server string   override the kubeconfig server host
  -n, --namespace string           namespace of the k3k cluster
      --org strings                Organization name (ORG) of the generated certificates for the kubeconfig
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Richtlinie

K3k-Richtlinie-Befehl.

=== Optionen

----
  -h, --help   help for policy
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Richtlinie erstellen

Eine neue Richtlinie erstellen.

----
k3kcli policy create [flags]
----

=== Beispiele

----
k3kcli policy create [command options] NAME
----

=== Optionen

----
      --annotations stringArray   Annotations to add to the policy object (e.g. key=value)
  -h, --help                      help for create
      --labels stringArray        Labels to add to the policy object (e.g. key=value)
      --mode string               The allowed mode type of the policy (default "shared")
      --namespace strings         The namespaces where to bind the policy
      --overwrite                 Overwrite namespace binding of existing policy
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Richtlinie löschen

Eine vorhandene Richtlinie löschen.

----
k3kcli policy delete [flags]
----

=== Beispiele

----
k3kcli policy delete [command options] NAME
----

=== Optionen

----
  -h, --help   help for delete
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----

== k3kcli Richtlinie auflisten

Alle vorhandenen Richtlinien auflisten.

----
k3kcli policy list [flags]
----

=== Beispiele

----
k3kcli policy list [command options]
----

=== Optionen

----
  -h, --help   help for list
----

=== Optionen, die von übergeordneten Befehlen geerbt werden

----
      --debug               Turn on debug logs
      --kubeconfig string   kubeconfig path ($HOME/.kube/config or $KUBECONFIG if set)
----
